hphp/hack/test/typecheck/reified_generics/valid_targ_array.php.exp
File "valid_targ_array.php", line 5, characters 14-18:
Invalid reified hint (Typing[4305])
File "valid_targ_array.php", line 5, characters 14-18:
This is an array type, it cannot be used as a reified type argument
File "valid_targ_array.php", line 3, characters 15-15:
T is reified
File "valid_targ_array.php", line 6, characters 14-24:
Invalid reified hint (Typing[4305])
File "valid_targ_array.php", line 6, characters 14-24:
This is an array type, it cannot be used as a reified type argument
File "valid_targ_array.php", line 3, characters 15-15:
T is reified
File "valid_targ_array.php", line 7, characters 14-32:
Invalid reified hint (Typing[4305])
File "valid_targ_array.php", line 7, characters 14-32:
This is an array type, it cannot be used as a reified type argument
File "valid_targ_array.php", line 3, characters 15-15:
T is reified
File "valid_targ_array.php", line 8, characters 14-37:
Invalid reified hint (Typing[4305])
File "valid_targ_array.php", line 8, characters 14-37:
This is an array type, it cannot be used as a reified type argument
File "valid_targ_array.php", line 3, characters 15-15:
T is reified
